<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Print Top Box</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Input content:</string>
    <string name="font_size">Font Size:</string>
    <string name="font_style">Font style:</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="myname">My Name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_share">Share</string>
    <string name="share_via">Share via...</string>
    <string name="title">Exit Application ?</string>
    <string name="content">Are you exit application?\nYou may want to try the game Choose Color.\nGame very very hard !!!</string>
    <string name="exit">Exit</string>
    <string name="more">Try</string>
    <string name="cancel">Cancel</string>
    <string name="template">Template</string>
    <string name="note">Note: Tap the image to adjust the text position</string>
    <string name="rotate">Rotate</string>

</resources>
