<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgpreview"
                android:src="@drawable/coca2"
                android:layout_gravity="center_horizontal"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/previour"
                    android:layout_centerVertical="true"
                    android:id="@+id/btnPreviour"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/next"
                    android:layout_centerVertical="true"
                    android:id="@+id/btnNext"/>
            </RelativeLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/name" />
            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/note"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textStyle="bold"
                android:layout_margin="8dp" />

            <SeekBar
                android:id="@+id/seeFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbOffset="5px"
                android:max="250"
                android:minHeight="10dip"
                android:maxHeight="10dip"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/thumb" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:textStyle="bold"
                android:layout_margin="8dp" />

            <SeekBar
                android:id="@+id/seeRotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbOffset="5px"
                android:max="360"
                android:minHeight="10dip"
                android:maxHeight="10dip"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/thumb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_style"
                android:textStyle="bold"
                android:layout_margin="8dp" />

            <Spinner

                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chooseFont"
                android:layout_gravity="center_horizontal" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnupdateWidget"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        ads:adUnitId="ca-app-pub-1857950562418699/2078551567"
        ads:adSize="SMART_BANNER"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
